--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,15 @@
 version: 0.2
+
 phases:
   install:
     runtime-versions:
       python: 3.10
   build:
     commands:
-      - aws cloudformation package --template-file pdftotxt.yaml --s3-bucket artifacts-bucket-gl --output-template-file lambdaoutput.yaml
+      - aws cloudformation package \
+          --template-file pdftotxt.yaml \
+          --s3-bucket artifacts-bucket-gl-yaseen \
+          --output-template-file lambdaoutput.yaml
 
 artifacts:
   type: zip
